--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".config.Init"
+            android:name=".activities.config.Init"
             android:label="@string/app_name" >
         </activity>
         <activity
